3.0.2
- a small change was done on P4A_Array_Source to enable the usage of empty
  array_sources without warnings
- tooltips are now automatically translated at rendering time

3.0.1
- a bug about session name was solved
- FCKEditor was updated to 2.6.2
- a bug with shadows CSS was solved (unused shadow.png file is not linked
  by screen.css anymore so we've no "file not found" in web server's logs)
- P4A_Error_Handler() global function now uses the P4A::messageWarning()
  wrapper for P4A::message() solving a bug with the warning icon name
  that was changed in 3.0.0-rc5
- jQuery UI was updated to 1.5.1

3.0.0
- P4A_DB_Source::addJoin*() methods now support the schema name as the last
  param
- FCKEditor was updated to 2.6.1
- P4A_EXCEPTION_HANDLER and P4A_ERROR_HANDLER constants were added so now
  you can set your own error/exception handlers
- a few comments where added to P4A_DB_Source
- a small change was done in P4A_Redirect_To_File() global function
  (index.php link was forced)
- a small bug with file download button (within file P4A_Field) on
  windows server was solved (generated file name is now correct)
- README file was updated with IIS compatibility
- P4A_DB_Navigator::allowMovement(false) is now supported
- P4A_Message default icon was ported to the new icons structure
- a bug on P4A_DB_Navigator drag&drop javascript was solved
- a bug (download file name) with P4A_Output_File() global 
  function was solved
- a bug with P4A_Output_File() global function automatic file delete
  on Windows servers was solved
- translations were synchronized

3.0.0-rc5
- P4A_Table's CSS was beautified a bit
- _disabled icons were removed, opacity: 0.2 filter is added to buttons
  to simulate the disabled effect
- P4A_Message's CSS was changed due to the variation of its usage, 
  now it's not black/bold anymore
- P4A_Table's order/row indicators were replaced with HTML entities
  removing the need for icons